# ikkinchi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: brain.rs  config.rs  embed.rs  import.rs  lib.rs  main.rs  search.rs  semantic.rs  store.rs  vectordb.rs
src/cli/: add.rs  delete.rs  edit.rs  export.rs  import.rs  init.rs  list.rs  mod.rs  reindex.rs  search.rs  stats.rs  tag.rs  tags.rs
src/tui/: app.rs  input.rs  mod.rs  ui.rs
src/tui/views/: add.rs  delete.rs  list.rs  mod.rs  search.rs  stats.rs  tags.rs  thought.rs
