[package]
name = "ikkinchi"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ikkinchi"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
rig-core = "0.32.0"
ratatui = "0.30.0"
crossterm = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.6"
chrono = { version = "0.4.44", features = ["serde"] }
anyhow = "1.0.102"
fuzzy-matcher = "0.3.7"
dirs = "6.0.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

[dev-dependencies]
tempfile = "3"
